2001-10-20  Jim Meyering  <meyering@lucent.com>

	* Version 4.1.1.

	* src/ls.c: Declare some local variables to be `const', where
	appropriate.
	(usage): Improve the description of --dereference (-L).

	* src/rm.c (usage): Clarify description of --directory (-d).
	Based on a patch from Michael Stone.

	* man/chmod.x: Describe sticky files and directories.
	From Michael Stone.

	* tests/mv/partition-perm: Don't use a umask that removes owner
	read/write.  Use a stricter test for permissions.

	* tests/cp/link-preserve: Don't use a umask that removes owner
	read/write.  That would induce spurious failures in a probably-
	outdated version of purify.

2001-10-18  Jim Meyering  <meyering@lucent.com>

	* src/mv.c (movefile): Now that remember_copied xstrdup's the file
	name, free `new_dest'.

	Plug a leak.
	* src/cp-hash.c (remember_copied): Use src_to_dest_free to free
	the entry we couldn't insert.

	Don't use free'd memory.
	* src/copy.c (dest_info_free): New function.
	(dest_info_init): Make the hash table code use it.
	(record_dest): Store each DEST in malloc'd  memory.  Hence the above.
	Use dest_info_free to free the `ent' we couldn't insert.

2001-10-14  Jim Meyering  <meyering@lucent.com>

	Now, -P is the same as --no-dereference, per POSIX.
	Use --parents to get the old meaning.

	* src/cp.c (enum) [NO_DEREFERENCE_OPTION]: Remove member.
	(long_opts): Associate --no-dereference with `-P'.
	(usage): Update description of -P.
	(main): Remove local, used_P_option, and code to warn
	that the meaning of -P would be changing.

2001-10-13  Jim Meyering  <meyering@lucent.com>

	* src/copy.c (copy_internal): Tighten up and add comments
	describing the test for when to record (via remember_copied)
	a <dst_path, source_dev, source_ino> triple.
	Relax the test that guards the hard-linked-dir check and
	the hard-link-preserving code.

	Remove the link-preserving semantics from cp_options.dereference.
	Clean up the code that preserves links for `cp -d' and `mv'.